<resources>
    <string name="app_name">Calculadora de Riscos Capilares</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="editT_email">Email</string>
    <string name="editT_senha">Senha</string>
    <string name="btn_logar">Logar</string>
    <string name="textV_Rec_Senha">Recuperar Senha</string>
    <string name="textV_cadastrar">Cadastrar</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="Btn_salvar">Salvar</string>
    <string name="hint_Nome">Nome</string>
    <string name="hint_Senha">Senha</string>
    <string name="hint_Email">Email</string>
    <string name="hint_confirmar_senha">Confirmar Senha</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_salvar">Salvar</string>
    <string name="Tools_share">Share</string>
    <string name="Comuni_send">Send</string>
    <string name="slid_slideshow">Slideshow</string>
    <string name="galeria_gallery">Gallery</string>
    <string name="fotos_import">Import</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textV_feminino">Feminino</string>
    <string name="textV_masculino">Masculino</string>
    <string name="textV_sexo">Sexo</string>
    <string name="textV_sim">Sim</string>
    <string name="textV_Procedimentos">Procedimentos</string>
    <string name="textV_Gestante">É gestante?</string>
    <string name="www_texV_softwaresa_com_br">www.softwaresa.com.br</string>
    <string name="todo">TODO</string>
    <string name="rb_nao">Não</string>
    <string name="texV_tipo_de_cabelo_natural">Tipo de cabelo natural?</string>
    <string name="txt_sexo">Sexo</string>
    <string name="txt_feminino">Feminino</string>
    <string name="txt_masculino">Masculino</string>
    <string name="txt_gestante">Gestante</string>
    <string name="txt_sim">Sim</string>
    <string name="txt_Não1">Não</string>
    <string name="txt_Avançar1">Avançar</string>
    <string name="txt_teste_de_toque">Teste de toque</string>
    <string name="atxt_Apresentou_alergias">Apresentou alergias?</string>
    <string name="txt_Apresentou_irritabilidade_capilar">Apresentou irritabilidade capilar?</string>
    <string name="txt_Teste_de_mechas">Teste de mechas</string>
    <string name="txt_Sim1">Sim</string>
    <string name="txt_Não2">Não</string>
    <string name="txt_Sim2">Sim</string>
    <string name="txt_Não">Não</string>
    <string name="txt_Tipo_de_cabelo_natural">Tipo de cabelo natural</string>
    <string name="btn_Próximo">Próximo</string>
    <string name="txt_É_gestante">È gestante?</string>
    <string name="text_É_gestante">É gestante?</string>
    <string name="txt_Avançar">Avançar</string>
    <string name="btn_Avançar3">Avançar</string>
    <string name="btn_Avançar" />
    <string name="btn_Avancar4">Avançar</string>
</resources>
